Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerBoolean.quorum
integer i = cast(integer, true)