Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjBoolean.quorum
Integer i = cast(Integer, true)